[feature]:Redis封装优化